Correct output paths for Xamarin projects

--- a/Source/OxyPlot.XamarinIOS/OxyPlot.XamarinIOS.csproj
+++ b/Source/OxyPlot.XamarinIOS/OxyPlot.XamarinIOS.csproj
@@ -23,11 +23,12 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Release</OutputPath>
+    <Optimize>true</Optimize>
+    <OutputPath>..\..\Output\XamarinIOS\</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
+    <DocumentationFile>..\..\Output\XamarinIOS\OxyPlot.XamarinIOS.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
