--- a/Source/Examples/XamarinAndroid/ExampleBrowser/ExampleBrowser.csproj
+++ b/Source/Examples/XamarinAndroid/ExampleBrowser/ExampleBrowser.csproj
@@ -34,7 +34,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>True</Optimize>
-    <OutputPath>..\..\..\..\Output\Examples\XamarinAndroid\ExampleBrowser\</OutputPath>
+    <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
