--- a/Source/OxyPlot/OxyPlot_NET35.csproj
+++ b/Source/OxyPlot/OxyPlot_NET35.csproj
@@ -48,6 +48,7 @@
     <Compile Include="..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="PlotModel\IPlotElement.cs" />
     <Compile Include="Series\IScatterPointProvider.cs" />
     <Compile Include="Input\Gestures\OxyMouseEnterGesture.cs" />
     <Compile Include="PlotController\DelegatePlotControllerCommand.cs" />
