--- a/Source/OxyPlot.Metro/OxyPlot.Metro.csproj
+++ b/Source/OxyPlot.Metro/OxyPlot.Metro.csproj
@@ -33,6 +33,7 @@
     <DefineConstants>TRACE;NETFX_CORE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>..\..\Output\NetCore45\OxyPlot.Metro.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|ARM'">
     <DebugSymbols>true</DebugSymbols>
