--- a/Packages/OxyPlot.Core/OxyPlot.Core.nuspec
+++ b/Packages/OxyPlot.Core/OxyPlot.Core.nuspec
@@ -5,7 +5,7 @@
     <version>2014.1.1</version>
     <authors>objo</authors>
     <licenseUrl>http://oxyplot.codeplex.com/license</licenseUrl>
-    <projectUrl>http://oxyplot.codeplex.com/</projectUrl>
+    <projectUrl>http://oxyplot.org/</projectUrl>
     <iconUrl>http://oxyplot.org/icons/oxyplot_128.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>OxyPlot is an open source plotting library for .NET. This core package is included in the other OxyPlot packages.</description>
