--- a/Packages/OxyPlot.OpenXml/OxyPlot.OpenXml.nuspec
+++ b/Packages/OxyPlot.OpenXml/OxyPlot.OpenXml.nuspec
@@ -11,7 +11,7 @@
     <description>OxyPlot is an open source plotting library for .NET. This package contains the OpenXML (.docx) export extensions.</description>
     <tags>openxml plotting plot charting chart</tags>
     <dependencies>
-      <dependency id="OxyPlot.Core" version="$version"/>
+      <dependency id="OxyPlot.Core" version="[$version]"/>
     </dependencies>
   </metadata>
 </package>
