--- a/Packages/OxyPlot.Pdf/OxyPlot.Pdf.nuspec
+++ b/Packages/OxyPlot.Pdf/OxyPlot.Pdf.nuspec
@@ -11,7 +11,7 @@
     <description>OxyPlot is an open source plotting library for .NET. This package contains the .pdf export extensions for Silverlight, .NET 4.0 and .NET 4.5.</description>
     <tags>pdf plotting plot charting chart</tags>
     <dependencies>
-      <dependency id="OxyPlot.Core" version="$version"/>
+      <dependency id="OxyPlot.Core" version="[$version]"/>
     </dependencies>
   </metadata>
 </package>
