--- a/XamarinComponents/OxyPlot/samples/OxyPlotSample.iOS/OxyPlotSample.iOS.csproj
+++ b/XamarinComponents/OxyPlot/samples/OxyPlotSample.iOS/OxyPlotSample.iOS.csproj
@@ -3,8 +3,6 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">iPhoneSimulator</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{7C0D8F20-2BF4-43A3-9549-6BD42BF14BD1}</ProjectGuid>
     <ProjectTypeGuids>{6BC8ED88-2882-458C-8E55-DFD12B67127B};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Exe</OutputType>
@@ -95,6 +93,12 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="monotouch" />
+    <Reference Include="OxyPlot.XamarinIOS">
+      <HintPath>..\..\bin\OxyPlot.XamarinIOS.dll</HintPath>
+    </Reference>
+    <Reference Include="OxyPlot">
+      <HintPath>..\..\bin\OxyPlot.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\Icon-60%402x.png" />
@@ -110,24 +114,11 @@
     <Compile Include="OxyPlotSample.iOSViewController.designer.cs">
       <DependentUpon>OxyPlotSample.iOSViewController.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="MainStoryboard_iPhone.storyboard" />
     <InterfaceDefinition Include="MainStoryboard_iPad.storyboard" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Source\OxyPlot\OxyPlot.csproj">
-      <Project>{7A0B35C0-DD17-4964-8E9A-44D6CECDC692}</Project>
-      <Name>OxyPlot</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\Source\OxyPlot.XamarinIOS\OxyPlot.XamarinIOS.csproj">
-      <Project>{7DCF07B1-B8BD-4EF0-B1FC-2AAC4466B6C6}</Project>
-      <Name>OxyPlot.XamarinIOS</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\OxyPlotSample\OxyPlotSample.csproj">
-      <Project>{D1F615E8-0DE7-4CC1-B092-B7DF669ECA46}</Project>
-      <Name>OxyPlotSample</Name>
-    </ProjectReference>
-  </ItemGroup>
 </Project>
