hg: ignore Xamarin component output files

--- a/.hgignore
+++ b/.hgignore
@@ -44,6 +44,11 @@ Web/favicon.ico
 
 Tools/    # Add manually
 
+XamarinComponents/OxyPlot/doc
+XamarinComponents/OxyPlot/icons
+XamarinComponents/OxyPlot/htmldoc
+XamarinComponents/OxyPlot/msxdoc
+
 _ReSharper*/
 _TeamCity*/
 [Pp]ackages/
