--- a/Source/OxyPlot/OxyPlot_SL4.csproj
+++ b/Source/OxyPlot/OxyPlot_SL4.csproj
@@ -69,26 +69,31 @@
     <Compile Include="..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Graphics\DelegateGraphicsControllerCommand{T}.cs" />
+    <Compile Include="PlotController\DelegatePlotControllerCommand.cs" />
+    <Compile Include="Graphics\GraphicsElement.cs" />
+    <Compile Include="Graphics\GraphicsElementCollection{T}.cs" />
+    <Compile Include="Graphics\GraphicsModel.cs" />
+    <Compile Include="Graphics\IGraphicsController.cs" />
+    <Compile Include="Graphics\IGraphicsControllerCommand.cs" />
+    <Compile Include="Graphics\IGraphicsControllerCommand{T}.cs" />
+    <Compile Include="Graphics\IGraphicsView.cs" />
+    <Compile Include="PlotController\IPlotController.cs" />
     <Compile Include="PlotModel\IPlotElement.cs" />
     <Compile Include="Series\IScatterPointProvider.cs" />
     <Compile Include="Input\Gestures\OxyMouseEnterGesture.cs" />
-    <Compile Include="PlotController\DelegatePlotControllerCommand.cs" />
     <Compile Include="PlotController\EventArgs\OxyInputEventArgs.cs" />
     <Compile Include="PlotController\EventArgs\OxyKeyEventArgs.cs" />
     <Compile Include="PlotController\EventArgs\OxyMouseDownEventArgs.cs" />
     <Compile Include="PlotController\EventArgs\OxyMouseWheelEventArgs.cs" />
     <Compile Include="PlotController\EventArgs\OxyTouchEventArgs.cs" />
-    <Compile Include="PlotController\InputCommandBinding.cs" />
-    <Compile Include="PlotController\IPlotController.cs" />
-    <Compile Include="PlotController\IPlotControllerCommand{T}.cs" />
+    <Compile Include="Graphics\InputCommandBinding.cs" />
     <Compile Include="PlotController\PlotController.cs" />
-    <Compile Include="PlotController\IPlotControllerCommand.cs" />
     <Compile Include="PlotController\Manipulators\MouseManipulator.cs" />
     <Compile Include="PlotController\Manipulators\TouchManipulator.cs" />
     <Compile Include="PlotController\PlotCommands.cs" />
     <Compile Include="PlotController\PlotControllerExtensions.cs" />
     <Compile Include="PlotModel\HitTestArguments.cs" />
-    <Compile Include="PlotModel\PlotElementCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="LibraryDoc.cs" />
     <Compile Include="NamespaceDoc.cs" />
@@ -233,12 +238,12 @@
     <Compile Include="PlotController\Manipulators\TrackerManipulator.cs" />
     <Compile Include="PlotController\Manipulators\ZoomRectangleManipulator.cs" />
     <Compile Include="PlotController\Manipulators\ZoomStepManipulator.cs" />
-    <Compile Include="PlotController\PlotControllerBase.cs" />
+    <Compile Include="Graphics\GraphicsControllerBase.cs" />
     <Compile Include="PlotModel\HitTestResult.cs" />
     <Compile Include="PlotModel\Selection.cs" />
     <Compile Include="PlotModel\SelectionMode.cs" />
     <Compile Include="PlotModel\TrackerEventArgs.cs" />
-    <Compile Include="PlotView\IPlotControl.cs" />
+    <Compile Include="PlotView\IPlotView.cs" />
     <Compile Include="PlotView\CursorType.cs" />
     <Compile Include="Series\BarSeries\BarItem.cs" />
     <Compile Include="Series\BarSeries\BarItemBase.cs" />
