--- a/Source/OxyPlot/OxyPlot.csproj
+++ b/Source/OxyPlot/OxyPlot.csproj
@@ -47,14 +47,14 @@
     <Compile Include="..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="Graphics\DelegateGraphicsControllerCommand{T}.cs" />
-    <Compile Include="PlotController\DelegatePlotControllerCommand.cs" />
+    <Compile Include="Graphics\DelegateViewCommand{T}.cs" />
+    <Compile Include="PlotController\DelegatePlotCommand.cs" />
     <Compile Include="Graphics\GraphicsElement.cs" />
     <Compile Include="Graphics\GraphicsElementCollection{T}.cs" />
     <Compile Include="Graphics\GraphicsModel.cs" />
     <Compile Include="Graphics\IGraphicsController.cs" />
-    <Compile Include="Graphics\IGraphicsControllerCommand.cs" />
-    <Compile Include="Graphics\IGraphicsControllerCommand{T}.cs" />
+    <Compile Include="Graphics\IViewCommand.cs" />
+    <Compile Include="Graphics\IViewCommand{T}.cs" />
     <Compile Include="Graphics\IGraphicsView.cs" />
     <Compile Include="PlotController\IPlotController.cs" />
     <Compile Include="PlotModel\IPlotElement.cs" />
