--- a/Source/OxyPlot/OxyPlot.csproj
+++ b/Source/OxyPlot/OxyPlot.csproj
@@ -51,7 +51,7 @@
     <Compile Include="PlotController\DelegatePlotCommand.cs" />
     <Compile Include="Graphics\GraphicsElement.cs" />
     <Compile Include="Graphics\GraphicsElementCollection{T}.cs" />
-    <Compile Include="Graphics\GraphicsModel.cs" />
+    <Compile Include="Graphics\Model.cs" />
     <Compile Include="Graphics\IGraphicsController.cs" />
     <Compile Include="Graphics\IViewCommand.cs" />
     <Compile Include="Graphics\IViewCommand{T}.cs" />
