--- a/Source/OxyPlot/OxyPlot.csproj
+++ b/Source/OxyPlot/OxyPlot.csproj
@@ -52,10 +52,10 @@
     <Compile Include="Graphics\Element.cs" />
     <Compile Include="Graphics\ElementCollection{T}.cs" />
     <Compile Include="Graphics\Model.cs" />
-    <Compile Include="Graphics\IGraphicsController.cs" />
+    <Compile Include="Graphics\IController.cs" />
     <Compile Include="Graphics\IViewCommand.cs" />
     <Compile Include="Graphics\IViewCommand{T}.cs" />
-    <Compile Include="Graphics\IGraphicsView.cs" />
+    <Compile Include="Graphics\IView.cs" />
     <Compile Include="PlotController\IPlotController.cs" />
     <Compile Include="PlotModel\IPlotElement.cs" />
     <Compile Include="Series\IScatterPointProvider.cs" />
@@ -216,7 +216,7 @@
     <Compile Include="PlotController\Manipulators\TrackerManipulator.cs" />
     <Compile Include="PlotController\Manipulators\ZoomRectangleManipulator.cs" />
     <Compile Include="PlotController\Manipulators\ZoomStepManipulator.cs" />
-    <Compile Include="Graphics\GraphicsControllerBase.cs" />
+    <Compile Include="Graphics\ControllerBase.cs" />
     <Compile Include="PlotModel\HitTestResult.cs" />
     <Compile Include="PlotModel\Selection.cs" />
     <Compile Include="PlotModel\SelectionMode.cs" />
