--- a/XamarinComponents/OxyPlot/samples/OxyPlotSample.Android/OxyPlotSample.Android.csproj
+++ b/XamarinComponents/OxyPlot/samples/OxyPlotSample.Android/OxyPlotSample.Android.csproj
@@ -37,6 +37,7 @@
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
     <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
+    <AndroidSupportedAbis>armeabi;armeabi-v7a;x86</AndroidSupportedAbis>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
