--- a/Source/Examples/XamarinAndroid/ExampleBrowser/ExampleBrowser.csproj
+++ b/Source/Examples/XamarinAndroid/ExampleBrowser/ExampleBrowser.csproj
@@ -62,15 +62,15 @@
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <AndroidResource Include="Resources\Layout\ListItem.axml" />
+    <AndroidResource Include="..\..\..\..\Icons\OxyPlot_72.png">
+      <Link>Resources\Drawable\icon.png</Link>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\Layout\PlotActivity.axml" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\Values\Strings.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\Drawable\Icon.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\OxyPlot.XamarinAndroid\OxyPlot.XamarinAndroid.csproj">
