--- a/Source/OxyPlot/OxyPlot_NET35.csproj
+++ b/Source/OxyPlot/OxyPlot_NET35.csproj
@@ -48,6 +48,7 @@
     <Compile Include="..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Annotations\PointAnnotation.cs" />
     <Compile Include="Graphics\DelegateViewCommand{T}.cs" />
     <Compile Include="Graphics\ManipulatorBase.cs" />
     <Compile Include="PlotController\DelegatePlotCommand.cs" />
@@ -73,7 +74,7 @@
     <Compile Include="PlotController\Manipulators\TouchManipulator.cs" />
     <Compile Include="PlotController\PlotCommands.cs" />
     <Compile Include="Graphics\ControllerExtensions.cs" />
-    <Compile Include="PlotModel\HitTestArguments.cs" />
+    <Compile Include="Graphics\HitTestArguments.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="LibraryDoc.cs" />
     <Compile Include="NamespaceDoc.cs" />
@@ -219,9 +220,9 @@
     <Compile Include="PlotController\Manipulators\ZoomRectangleManipulator.cs" />
     <Compile Include="PlotController\Manipulators\ZoomStepManipulator.cs" />
     <Compile Include="Graphics\ControllerBase.cs" />
-    <Compile Include="PlotModel\HitTestResult.cs" />
-    <Compile Include="PlotModel\Selection.cs" />
-    <Compile Include="PlotModel\SelectionMode.cs" />
+    <Compile Include="Graphics\HitTestResult.cs" />
+    <Compile Include="Graphics\Selection.cs" />
+    <Compile Include="Graphics\SelectionMode.cs" />
     <Compile Include="PlotModel\TrackerEventArgs.cs" />
     <Compile Include="PlotView\IPlotView.cs" />
     <Compile Include="Graphics\CursorType.cs" />
@@ -238,14 +239,14 @@
     <Compile Include="Series\BoxPlotSeries.cs" />
     <Compile Include="Series\HeatMapSeries.cs" />
     <Compile Include="Series\LineLegendPosition.cs" />
-    <Compile Include="PlotModel\PlotModel.MouseEvents.cs" />
+    <Compile Include="Graphics\Model.MouseEvents.cs" />
     <Compile Include="PlotController\EventArgs\OxyMouseEventArgs.cs" />
     <Compile Include="PlotModel\PlotElement.cs" />
     <Compile Include="PlotModel\PlotModel.Legends.cs" />
     <Compile Include="PlotModel\PlotModel.Rendering.cs" />
     <Compile Include="PlotModel\PlotModel.cs" />
-    <Compile Include="PlotModel\SelectablePlotElement.cs" />
-    <Compile Include="PlotModel\UIPlotElement.cs" />
+    <Compile Include="Graphics\SelectableElement.cs" />
+    <Compile Include="Graphics\UIElement.cs" />
     <Compile Include="Reporting\NamespaceDoc.cs" />
     <Compile Include="Reporting\ReportWriters\WikiReportWriter.cs" />
     <Compile Include="Reporting\ReportWriters\HtmlReportWriter.cs" />
