--- a/Source/OxyPlot/OxyPlot_SL4.csproj
+++ b/Source/OxyPlot/OxyPlot_SL4.csproj
@@ -70,6 +70,7 @@
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Annotations\PointAnnotation.cs" />
+    <Compile Include="Annotations\ShapeAnnotation.cs" />
     <Compile Include="Graphics\DelegateViewCommand{T}.cs" />
     <Compile Include="Graphics\ManipulatorBase.cs" />
     <Compile Include="PlotController\DelegatePlotCommand.cs" />
@@ -82,6 +83,7 @@
     <Compile Include="Graphics\IView.cs" />
     <Compile Include="PlotController\IPlotController.cs" />
     <Compile Include="PlotModel\IPlotElement.cs" />
+    <Compile Include="PlotModel\IPlotModel.cs" />
     <Compile Include="Series\IScatterPointProvider.cs" />
     <Compile Include="Input\Gestures\OxyMouseEnterGesture.cs" />
     <Compile Include="PlotController\EventArgs\OxyInputEventArgs.cs" />
