--- a/Packages/OxyPlot.Metro/OxyPlot.Metro.nuspec
+++ b/Packages/OxyPlot.Metro/OxyPlot.Metro.nuspec
@@ -18,6 +18,7 @@
   </metadata>
   <files>
     <file src="lib\NetCore45\OxyPlot.Metro\Themes\Generic.xbf" target="lib\NetCore45\OxyPlot.Metro\Themes\Generic.xbf"/>
+    <file src="lib\NetCore45\OxyPlot.Metro\OxyPlot.Metro.xr.xml" target="lib\NetCore45\OxyPlot.Metro\OxyPlot.Metro.xr.xml"/>
     <file src="lib\NetCore45\OxyPlot.Metro.dll" target="lib\NetCore45\OxyPlot.Metro.dll"/>
     <file src="lib\NetCore45\OxyPlot.Metro.pri" target="lib\NetCore45\OxyPlot.Metro.pri"/>
     <file src="lib\NetCore45\OxyPlot.Metro.XML" target="lib\NetCore45\OxyPlot.Metro.XML"/>
