--- a/Packages/OxyPlot.Metro/OxyPlot.Metro.nuspec
+++ b/Packages/OxyPlot.Metro/OxyPlot.Metro.nuspec
@@ -9,11 +9,11 @@
     <projectUrl>http://oxyplot.org/</projectUrl>
     <iconUrl>http://oxyplot.org/icons/oxyplot_128.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>OxyPlot is an open source plotting library for .NET.</description>
+    <description>OxyPlot is an open source plotting library for .NET. This package contains the custom control for Windows 8 Store apps.</description>
     <language>en-US</language>
     <tags>winrt win8 metro plotting plot charting chart</tags>
     <dependencies>
-      <dependency id="OxyPlot.Core" version="[$version]"/>
+      <dependency id="OxyPlot.Core" version="2014.1.1"/>
     </dependencies>
   </metadata>
   <files>
