--- a/Packages/OxyPlot.WindowsForms/OxyPlot.WindowsForms.nuspec
+++ b/Packages/OxyPlot.WindowsForms/OxyPlot.WindowsForms.nuspec
@@ -8,10 +8,10 @@
     <projectUrl>http://oxyplot.org/</projectUrl>
     <iconUrl>http://oxyplot.org/icons/oxyplot_128.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>OxyPlot is an open source plotting library for .NET.</description>
+    <description>OxyPlot is an open source plotting library for .NET. This package contains the custom control for Windows Forms.</description>
     <tags>winforms plotting plot charting chart</tags>
     <dependencies>
-      <dependency id="OxyPlot.Core" version="[$version]"/>
+      <dependency id="OxyPlot.Core" version="2014.1.1"/>
     </dependencies>
   </metadata>
 </package>
