--- a/Packages/OxyPlot.XamarinAndroid/OxyPlot.XamarinAndroid.nuspec
+++ b/Packages/OxyPlot.XamarinAndroid/OxyPlot.XamarinAndroid.nuspec
@@ -9,10 +9,10 @@
     <projectUrl>http://oxyplot.org/</projectUrl>
     <iconUrl>http://oxyplot.org/icons/oxyplot_128.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>OxyPlot is an open source plotting library for .NET.</description>
+    <description>OxyPlot is an open source plotting library for .NET. This package contains the custom view for Android apps.</description>
     <tags>xamarin android plotting plot charting chart</tags>
     <dependencies>
-      <dependency id="OxyPlot.Core" version="[$version]"/>
+      <dependency id="OxyPlot.Core" version="2014.1.1"/>
     </dependencies>
   </metadata>
   <files>
