--- a/Packages/OxyPlot.XamarinIOS/OxyPlot.XamarinIOS.nuspec
+++ b/Packages/OxyPlot.XamarinIOS/OxyPlot.XamarinIOS.nuspec
@@ -12,7 +12,7 @@
     <description>OxyPlot is an open source plotting library for .NET.</description>
     <tags>xamarin iOS plotting plot charting chart</tags>
     <dependencies>
-      <dependency id="OxyPlot.Core" version="[$version]"/>
+      <dependency id="OxyPlot.Core" version="2014.1.1"/>
     </dependencies>
   </metadata>
   <files>
