Rename ScatterWithErrorBarSeries to ScatterErrorSeries (make consistent: ScatterPoint/ScatterSeries, ScatterErrorPoint/ScatterErrorSeries) Update project files

--- a/Source/OxyPlot.Wpf/OxyPlot.Wpf_NET35.csproj
+++ b/Source/OxyPlot.Wpf/OxyPlot.Wpf_NET35.csproj
@@ -87,6 +87,7 @@
     <Compile Include="PlotView.Properties.cs" />
     <Compile Include="Series\HeatMapSeries.cs" />
     <Compile Include="Series\StairStepSeries.cs" />
+    <Compile Include="Series\ScatterErrorSeries.cs" />
     <Compile Include="Utilities\WeakEvents\RenderingEventListener.cs" />
     <Compile Include="Utilities\WeakEvents\RenderingEventManager.cs" />
     <Compile Include="Utilities\WeakEvents\WeakEventListener{TEventManager,TEventArgs}.cs" />
