--- a/Source/OxyPlot/OxyPlot_WindowsUniversal.csproj
+++ b/Source/OxyPlot/OxyPlot_WindowsUniversal.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Pdf\StandardFonts.cs" />
     <Compile Include="Series\ScatterErrorPoint.cs" />
     <Compile Include="Series\ScatterErrorSeries.cs" />
+    <Compile Include="Series\ScatterSeries{T}.cs" />
     <Compile Include="Utilities\AxisUtilities.cs" />
     <Compile Include="Utilities\XmlWriterBase.cs" />
     <Compile Include="Utilities\BinaryReaderExtensions.cs" />
