--- a/Source/OxyPlot.Wpf/OxyPlot.Wpf.csproj
+++ b/Source/OxyPlot.Wpf/OxyPlot.Wpf.csproj
@@ -84,6 +84,7 @@
     <Compile Include="PlotView.Properties.cs" />
     <Compile Include="PlotView.TouchEvents.cs" />
     <Compile Include="Series\HeatMapSeries.cs" />
+    <Compile Include="Series\ScatterSeries{T}.cs" />
     <Compile Include="Series\StairStepSeries.cs" />
     <Compile Include="Series\ScatterErrorSeries.cs" />
     <Compile Include="Utilities\WeakEvents\RenderingEventListener.cs" />
