--- a/Source/Examples/ExampleLibrary/ExampleLibrary_SL4.csproj
+++ b/Source/Examples/ExampleLibrary/ExampleLibrary_SL4.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Examples\BarSeries\BarSeriesExamples.cs" />
     <Compile Include="Examples\BarSeries\ColumnSeriesExamples.cs" />
     <Compile Include="Examples\BarSeries\ErrorColumnSeriesExamples.cs" />
+    <Compile Include="Examples\ScatterErrorSeriesExamples.cs" />
     <Compile Include="Examples\BoxPlotSeriesExamples.cs" />
     <Compile Include="Examples\CandleStickSeriesExamples.cs" />
     <Compile Include="Examples\CartesianAxesExamples.cs" />
@@ -120,7 +121,6 @@
     <Compile Include="Examples\XkcdExamples.cs" />
     <Compile Include="Helpers\Sun.cs" />
     <Compile Include="Issues\OpenIssues.cs" />
-    <Compile Include="Issues\ClosedIssues.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
