ExampleLibrary: rename OpenIssues to Issues

--- a/Source/Examples/ExampleLibrary/ExampleLibrary.csproj
+++ b/Source/Examples/ExampleLibrary/ExampleLibrary.csproj
@@ -98,7 +98,7 @@
     <Compile Include="Examples\TwoColorLineSeriesExamples.cs" />
     <Compile Include="Examples\XkcdExamples.cs" />
     <Compile Include="Helpers\Sun.cs" />
-    <Compile Include="Issues\OpenIssues.cs" />
+    <Compile Include="Issues\Issues.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
